Fix build issues

--- a/csgo-kz/Dockerfile
+++ b/csgo-kz/Dockerfile
@@ -1,8 +1,11 @@
 FROM timche/csgo:latest
 
+USER root
+
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-    wait-for-it
+    wait-for-it \
+    && rm -rf /var/lib/apt/lists/*
 
 USER csgo
 
