Fix entrypoint perms

--- a/csgo-kz/Dockerfile
+++ b/csgo-kz/Dockerfile
@@ -47,8 +47,12 @@ RUN chmod 600 /home/csgo/plugins/addons/sourcemod/plugins/*.smx
 RUN chmod 700 /home/csgo/plugins/addons/sourcemod/extensions/*.so
 RUN chmod 700 /home/csgo/plugins/addons/sourcemod/extensions/*.autoload
 
+WORKDIR /home/csgo
+
 COPY databases.cfg /home/csgo/plugins/addons/sourcemod/configs/
 
-COPY entrypoint.sh /usr/local/bin/
+COPY entrypoint.sh /home/csgo/
 
-CMD [ "entrypoint.sh" ]
+RUN chmod +x /home/csgo/entrypoint.sh
+
+CMD [ "/home/csgo/entrypoint.sh" ]
