--- a/csgo-kz/databases.cfg
+++ b/csgo-kz/databases.cfg
@@ -1,46 +1,34 @@
-Databases"
+Databases
 {
-        "driver_default"                "sqlite"
-
-        // When specifying "host", you may use an IP address, a hostname, or a socket file path
+        "driver_default"    "sqlite"
 
         "default"
         {
-                "driver"                        "default"
-                //"host"                          "localhost"
-                "database"                      "sourcemod"
-                //"user"                          "root"
-                //"pass"                          ""
-                //"timeout"                     "0"
-                //"port"                        "0"
+                "driver"    "default"
+                "database"  "sourcemod"
         }
 
         "storage-local"
         {
-                "driver"                        "sqlite"
-                "database"                      "sourcemod-local"
+                "driver"    "sqlite"
+                "database"  "sourcemod-local"
         }
 
         "clientprefs"
         {
-                "driver"                        "sqlite"
-                //"host"                          "localhost"
-                "database"                      "clientprefs-sqlite"
-                //"user"                          "root"
-                //"pass"                          ""
-                //"timeout"                     "0"
-                //"port"                        "0"
+                "driver"    "sqlite"
+                "database"  "clientprefs-sqlite"
         }
 
         "gokz"
         {
-                "driver"                        "sqlite"
-                "database"                      "gokz"
+                "driver"    "sqlite"
+                "database"  "gokz"
         }
 
         "kztimer"
         {
-                "driver"                        "sqlite"
-                "database"                      "kztimer"
+                "driver"    "sqlite"
+                "database"  "kztimer"
         }
 }
