--- a/csgo-kz/Dockerfile
+++ b/csgo-kz/Dockerfile
@@ -27,6 +27,7 @@ RUN wget -qO- https://bitbucket.org/kztimerglobalteam/globalrecordssmplugin/down
 RUN wget -qO- https://bitbucket.org/kztimerglobalteam/globalrecordssmplugin/downloads/GlobalAPI-Jumpstats-v.1.2.1.zip | bsdtar --strip 1 -xf -
 RUN wget -qO- https://bitbucket.org/GameChaos/zone-stopwatch/downloads/ztopwatch-1.00.zip | bsdtar xf -
 RUN wget -qO- https://gokz.tv/fastdl/gokz_particles/gokz_particles.rar | bsdtar xf -
+RUN wget -qO- https://github.com/e54385991/console-cleaner/archive/master.zip | bsdtar --strip 1 -xf - && rm -rf README.md src
 
 WORKDIR /home/csgo/plugins/addons/sourcemod
 
